# ptychopy

./: .gitignore  CMakeLists.txt  README.md  install.sh  readMDA.py  requirements.txt  setup.py  testMpty.py  testPTY.py
GUI/: ptychopy_GUI.py
LICENSE.md/: LICENSE.md
data/: lena256.pgm  lena512.pgm
dependLib/diy2/include/diy/: .project
example/: diffConvert.py  epie.py  epieNP.py  mls.py  testMpty.py  testNPpty.py
example/data/: baboon1024.pgm  baboon128.pgm  baboon256.pgm  baboon512.pgm  lena1024.pgm
src/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CXMath.h  CartesianScanMesh.cpp  CartesianScanMesh.h  Cuda2DArray.cpp  Cuda2DArray.hpp  CudaSmartPtr.cpp  CudaSmartPtr.h  CudaSmartPtr.hpp  DM.cu  DM.h  DiffractionLoader.cpp  DiffractionLoader.h  Diffractions.cpp  Diffractions.cuh  Diffractions.h  DiffractionsKernels.cu  FileManager.cpp  FileManager.h  GLResourceManager.cpp  IPhaser.cpp  IPhaser.h  IPhasingMethod.h  IPtychoScanMesh.cpp  IPtychoScanMesh.h  IRenderable.h  IRenderer.h  IRunnable.h  ListScanMesh.cpp  ListScanMesh.h  MLS.cpp  MLS.h  MPIPhaser.cpp  MPIPhaser.h  Makefile  Parameters.cpp  Parameters.h  (+28 more)
src/data/: lena128.pgm
src/examples/: optimizeEPIE.cpp  testEPIE.cpp
src/include/: CudaSmartPtr.h  DiffractionLoader.h  Diffractions.h  IPhaser.h  IPhasingMethod.h  IPtychoScanMesh.h  IRenderer.h  ListScanMesh.h  Sample.h  ScanMesh.cuh  Singleton.h  Timer.h  ePIE.h  utilities.h
src/ptycholib/: CMakeLists.txt  CXMath.h  CartesianScanMesh.cpp  CartesianScanMesh.h  Cuda2DArray.cpp  Cuda2DArray.hpp  CudaFFTPlan.cpp  CudaFFTPlan.h  CudaSmartPtr.cpp  CudaSmartPtr.h  CudaSmartPtr.hpp  DM.h  DiffractionLoader.cpp  Diffractions.cuh  Diffractions.h  DiffractionsKernels.cu  FileManager.cpp  FileManager.h  GLResourceManager.cpp  GLResourceManager.h  IPtychoScanMesh.cpp  IPtychoScanMesh.h  IRenderable.h  IRunnable.h  ListScanMesh.h  MLS.h  MPIPhaser.cpp  Parameters.cpp  Parameters.h  Probe.cpp  Probe.cuh  Probe.h  ProbeKernels.cu  RenderServer.cpp  RenderServer.h  Sample.cpp  Sample.cuh  Sample.h  SampleKernels.cu  ScanMeshKernels.cu  (+12 more)
src/ptycholib/examples/: optimizeEPIE.cpp
src/ptycholib/tools/: cudaComputeCapability.cpp
src/ptychopy/: CMakeLists.txt  __init__.py  ptychopy.c
src/tools/: GLRenderer.cpp  remotePtycho.cpp
